# hornix

./: .gitignore  Benchmarks.xlsx  CMakeLists.txt  LICENSE  README.md  hornix
Example/: chc-transform-copy-cpp.sh  chc-transform.sh  check-result.cpp  commands.txt  commond-functions.smt  example.cpp  example2.cpp  example3.cpp  example4.cpp  example5.cpp  example6.cpp  fun-call-assert-sat.cpp  fun-call-assert-unsat.cpp  fun-call.cpp  max-sat.cpp  max-unsat.cpp  success-benchmarks.txt  test-bench.sh  test-benchmark.sh  test-set.sh  tool.sh
Example/LLVMIRs/: chc-imp.txt  ex-assert-mem.ll  ex-assert.ll  ex-main.ll  ex-max-mem.ll  ex-max-no-opt.ll  ex-max.ll  ex-mem2reg-main.ll  ex-mem2reg.ll  ex-reg2mem.ll  ex-test-mem.ll  ex-test.ll  ex-unsat-mem.ll  ex-unsat.ll  ex2.ll  example-art-lt.ll  example-art-mem.ll  example-art.ll  example.ll  example2.ll  example3.ll  example4.ll  foo.ll  fun-call-assert-sat.ll  fun-call-assert-unsat.ll  fun-call.ll  max-sat.ll  max-unsat.ll
Example/smt/: example.smt2  example2.smt2  example3.smt2  example4.smt2  fun-call-assert-sat.smt2  fun-call-assert-unsat.smt2  fun-call.smt2  max-sat.smt2  (+8 more)
scripts/: chc-transform.sh  test-bench.sh  test-set.sh
src/: CLI.cpp  CLI.hpp  CMakeLists.txt  Exceptions.hpp  Preprocessing.cpp  Preprocessing.hpp  main.cpp
src/chc/: Backend.cpp  Backend.hpp  ChcTransform.cpp  ChcTransform.hpp  Helpers.cpp  Helpers.hpp  SMTOut.cpp  SMTOut.hpp
src/chc/utils/: Liveness.cpp  Liveness.hpp
src/ir-preprocess/: BoolSimplifyPass.cpp  BoolSimplifyPass.hpp
src/utils/: ScopeGuard.hpp
test/: run_tests.sh
(+30 files in other folders)
